--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "iu-alumni-bot",
     "version": "1.0.0",
     "dependencies": {
-        "axios": "^1.4.0"
+        "axios": "^1.4.0",
+        "pg": "^8.10.0"
     }
 }
