--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "dependencies": {
         "axios": "^1.4.0",
+        "node-fetch": "^3.3.2",
         "pg": "^8.10.0"
     }
 }
